--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Portfolio</title>
+    <title>Manley Media</title>
     <style>
         :root {
             --cream: #f5f5dc;
