--- a/index.html
+++ b/index.html
@@ -4,73 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manley Media</title>
-    <style>
-        :root {
-            --cream: #f5f5dc;
-            --blue: #001f3f;
-            --red: #ff4136;
-        }
-
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: var(--cream);
-            color: var(--blue);
-            line-height: 1.6;
-        }
-
-        header {
-            background-color: var(--blue);
-            color: var(--cream);
-            padding: 1rem;
-            text-align: center;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            margin: 1rem 0;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: var(--blue);
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            color: var(--red);
-        }
-
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-            padding: 1rem;
-        }
-
-        .gallery-item {
-            border: 1px solid var(--blue);
-            border-radius: 5px;
-            overflow: hidden;
-            text-align: center;
-            background: var(--cream);
-        }
-
-        .gallery-item img {
-            width: 100%;
-            display: block;
-        }
-
-        footer {
-            background-color: var(--blue);
-            color: var(--cream);
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
