added Javascript for dynamically producing video pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <img src="placeholder.jpg" alt="Video Thumbnail">
                 <h2>Video Title</h2>
             </div>
+            <div id="gallery"></div>
+            <script src="main.js"></script>
+         
             <!-- Additional items can be added dynamically -->
         </section>
     </main>
