--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manley Media</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
     <header>
@@ -28,6 +28,7 @@
                 <h2>Video Title</h2>
             </div>
             <div id="gallery"></div>
+            
             <script src="main.js"></script>
          
             <!-- Additional items can be added dynamically -->
