--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manley Media</title>
-    <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/styles.css"> <!-- Fixed CSS path -->
 </head>
 <body>
     <header>
@@ -27,10 +27,6 @@
                 <img src="placeholder.jpg" alt="Video Thumbnail">
                 <h2>Video Title</h2>
             </div>
-            <div id="gallery"></div>
-            
-            <script src="main.js"></script>
-         
             <!-- Additional items can be added dynamically -->
         </section>
     </main>
@@ -38,5 +34,7 @@
     <footer>
         <p>&copy; 2024 My Video Portfolio</p>
     </footer>
+
+    <script src="main.js"></script> <!-- Moved script tag -->
 </body>
 </html>
