--- a/pages/about.html
+++ b/pages/about.html
@@ -1,40 +1,46 @@
-<html>
-	<head>
-		<title>about</title>
-		<link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-	</head>
-	<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me - Josh Manley</title>
+    <link rel="stylesheet" href="stylesheets/styles.css"> <!-- Make sure this is correct -->
+</head>
+<body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="videos.html">Video</a>
+            <a href="about.html">About</a>
+        </nav>
+    </header>
 
-		<header>
-			<nav>
-				<a href="index.html">Home</a>
-				<a href="videos.html">Video</a>
-				<a href="about.html">About</a>
-			</nav>
-		</header>
+    <main>
+        <section class="about">
+            <h1>Josh Manley</h1>
+            <h2>Video Producer | Video Editor | Digital Media Specialist</h2>
 
-		<main>
-			<div class="about-intro">
+            <!-- Profile Photo -->
+            <img src="images/about.jpeg" alt="Josh Manley" class="profile-photo">
 
-				<h1>Josh Manley</h1>
-				<h2>Video Producer | Video Editor | Digital Media Specialist</h2>
+            <article class="about-text">
+                <p>
+                    High-performing Video Producer with more than seven years of experience contributing to organizational success and impactful storytelling. 
+                    Strong track record of inspiring effective cross-functional collaboration through direct communication and innovative problem-solving. 
+                    Confident in ability to juggle multiple projects at once while providing a steady supply of humor. 
+                    Committed to continuous improvement and life-long learning. Skilled in Adobe Premiere Pro, After Effects, DaVinci Resolve, Adobe Creative Suite. 
+                    Intermediate proficiency in Spanish and Portuguese.
+                </p>
+            </article>
+        </section>
+    </main>
 
-				<img src="images/about.jpeg" alt="">
+    <footer>
+        <a href="index.html">Home</a>
+        <a href="videos.html">Video</a>
+        <a href="about.html">About</a>
+    </footer>
 
-				<article class="about-text">
-				<p>High-performing Video Producer with more than seven years of experience contributing to organizational success and impactful storytelling. Strong track record of inspiring effective cross- functional collaboration through direct communication and innovative problem-solving. Confident in ability to juggle multiple projects at once while providing a steady supply of humor. Committed to continuous improvement and life-long learning. Skilled in Adobe Premiere Pro, After Effects, DaVinci Resolve, Adobe Creative Suite. Intermediate proficiency in Spanish and Portuguese.</p>
-				</article>
-
-			</div>
-
-		</main>
-
-		<footer>
-
-      <a href="index.html">Home</a>
-      <a href="videos.html">Video</a>
-      <a href="about.html">About</a>
-		</footer>
-
-	</body>
+    <script src="main.js"></script>
+</body>
 </html>
