--- a/pages/about.html
+++ b/pages/about.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <a href="index.html">Home</a>
-            <a href="videos.html">Video</a>
-            <a href="about.html">About</a>
+            <a href="pages/videos.html">Video</a>
+            <a href="pages/about.html">About</a>
         </nav>
     </header>
 
