--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+        <a href="pages/about.html">About</a>
+        <a href="pages/contact.html">Contact</a>
     </nav>
 
     <main>
