updating contact and about pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
     </header>
 
     <main>
-        <section class="about">
+        <section class="page-content">
             <h1>Josh Manley</h1>
             <h2>Video Producer | Video Editor | Digital Media Specialist</h2>
 
