--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
     </nav>
 
     <main>
-        <section class="contact">
+        <section class="page-content">
             <h2>Get in Touch</h2>
             <p>
                 I would love to hear about your project and how I can assist. Fill out the form below or reach out to me directly.
