updated about and contact pages again

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me - Manley Media</title>
-    <link rel="stylesheet" href="stylesheets/styles.css"> <!-- Ensure this is correct -->
+    <link rel="stylesheet" href="../stylesheets/styles.css"> <!-- Updated to point to correct location -->
 </head>
 <body>
     <header>
@@ -12,9 +12,9 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="pages/about.html">About</a>
-        <a href="pages/contact.html">Contact</a>
+        <a href="../index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <main>
@@ -39,7 +39,7 @@
             </form>
 
             <h3>Here's a photo of me:</h3>
-            <img src="path/to/your/photo.jpg" alt="Photo of [Your Name]" class="profile-photo">
+            <img src="../images/photo.jpg" alt="Photo of Josh Manley" class="profile-photo">
         </section>
     </main>
 
@@ -47,6 +47,6 @@
         <p>&copy; 2024 Manley Media</p>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
