--- a/pages/about.html
+++ b/pages/about.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Josh Manley</title>
-    <link rel="stylesheet" href="stylesheets/styles.css"> <!-- Make sure this is correct -->
+    <link rel="stylesheet" href="../stylesheets/styles.css"> <!-- Updated path -->
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="pages/videos.html">Video</a>
-            <a href="pages/about.html">About</a>
-        </nav>
+        <h1>About Me</h1>
     </header>
+
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="videos.html">Video</a>
+        <a href="about.html">About</a>
+    </nav>
 
     <main>
         <section class="page-content">
@@ -21,7 +23,7 @@
             <h2>Video Producer | Video Editor | Digital Media Specialist</h2>
 
             <!-- Profile Photo -->
-            <img src="images/about.jpeg" alt="Josh Manley" class="profile-photo">
+            <img src="../images/about.jpeg" alt="Josh Manley" class="profile-photo">
 
             <article class="about-text">
                 <p>
@@ -36,11 +38,9 @@
     </main>
 
     <footer>
-        <a href="index.html">Home</a>
-        <a href="videos.html">Video</a>
-        <a href="about.html">About</a>
+        <p>&copy; 2024 Manley Media</p>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
