--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
             <h2>Video Producer | Video Editor | Digital Media Specialist</h2>
 
             <!-- Profile Photo -->
-            <img src="../images/about.jpeg" alt="Josh Manley" class="profile-photo">
+            <img src="../images/photo.jpeg" alt="Josh Manley" class="profile-photo">
 
             <article class="about-text">
                 <p>
