updated JS and added JSON

--- a/pages/video.html
+++ b/pages/video.html
@@ -3,11 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Video Player</title>
+  <link rel="stylesheet" href="../stylesheets/styles.css"> <!-- Adjust path if needed -->
 </head>
 <body>
-  <div id="video-container"></div>
-  <script src="video.js"></script>
+  <header>
+    <h1>Video Player</h1>
+  </header>
+
+  <main>
+    <div id="video-container"></div>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Manley Media</p>
+  </footer>
+
+  <script src="../video.js"></script> <!-- Adjust path if needed -->
 </body>
 </html>
