--- a/index.html
+++ b/index.html
@@ -1,40 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manley Media</title>
-    <link rel="stylesheet" href="stylesheets/styles.css"> <!-- Fixed CSS path -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Manley Media</title>
+  <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
-    <header>
-        <h1>My Video Portfolio</h1>
-    </header>
+  <header>
+    <h1>My Video Portfolio</h1>
+  </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="pages/about.html">About</a>
-        <a href="pages/contact.html">Contact</a>
-    </nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="pages/about.html">About</a>
+    <a href="pages/contact.html">Contact</a>
+  </nav>
 
-    <main>
-        <section class="gallery">
-            <div class="gallery-item">
-                <img src="placeholder.jpg" alt="Video Thumbnail">
-                <h2>Video Title</h2>
-            </div>
-            <div class="gallery-item">
-                <img src="placeholder.jpg" alt="Video Thumbnail">
-                <h2>Video Title</h2>
-            </div>
-            <!-- Additional items can be added dynamically -->
-        </section>
-    </main>
+  <main>
+    <section id="gallery" class="gallery"></section>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 My Video Portfolio</p>
-    </footer>
+  <footer>
+    <p>&copy; 2024 Manley Media</p>
+  </footer>
 
-    <script src="main.js"></script> <!-- Moved script tag -->
+  <script src="main.js"></script>
 </body>
 </html>
