--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <p>&copy; 2024 Manley Media</p>
   </footer>
 
-  <script src="main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
