--- a/pages/video.html
+++ b/pages/video.html
@@ -19,6 +19,6 @@
     <p>&copy; 2024 Manley Media</p>
   </footer>
 
-  <script src="scripts/video.js"></script> <!-- Adjust path if needed -->
+  <script src="../scripts/video.js"></script> <!-- Adjust path if needed -->
 </body>
 </html>
