added videos and thumbnails to gallery page as well as improved layout

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
 </head>
 <body>
   <header>
-    <h1>My Video Portfolio</h1>
+    <h1 data-text="My Glowy Header"class="logo">JOSH MANLEY</h1>
+    <nav>
+      <a href="index.html">HOME</a>
+      <a href="pages/about.html">ABOUT</a>
+      <a href="pages/contact.html">CONTACT</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="pages/about.html">About</a>
-    <a href="pages/contact.html">Contact</a>
-  </nav>
+  
 
   <main>
     <section id="gallery" class="gallery"></section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Manley Media</p>
+    <p class="logo">&copy; 2024 Manley Media</p>
   </footer>
 
   <script src="scripts/main.js"></script>
