--- a/pages/about.html
+++ b/pages/about.html
@@ -13,8 +13,8 @@
 
     <nav>
         <a href="../index.html">Home</a>
-        <a href="videos.html">Video</a>
         <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <main>
@@ -23,7 +23,7 @@
             <h2>Video Producer | Video Editor | Digital Media Specialist</h2>
 
             <!-- Profile Photo -->
-            <img src="../images/photo.jpg" alt="Josh Manley" class="profile-photo">
+            <img src="../images/profile-photo.png" alt="Josh Manley" class="profile-photo">
 
             <article class="about-text">
                 <p>
