--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
             
 
             <h3>Here's a photo of me:</h3>
-            <img src="../images/photo.jpg" alt="Photo of Josh Manley" class="profile-photo">
+            <img src="../images/profile-photo.png" alt="Photo of Josh Manley" class="profile-photo">
         </section>
     </main>
 
