--- a/pages/video.html
+++ b/pages/video.html
@@ -3,22 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video Player</title>
-  <link rel="stylesheet" href="../stylesheets/styles.css"> <!-- Adjust path if needed -->
+  <title>Video Page</title>
+  <link rel="stylesheet" href="../stylesheets/styles.css">
 </head>
 <body>
   <header>
-    <h1>Video Player</h1>
+    <h1>Video Details</h1>
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
   <main>
-    <div id="video-container"></div>
+    <div id="video-container">
+      <!-- This content will be dynamically populated via video.js -->
+    </div>
   </main>
 
   <footer>
     <p>&copy; 2024 Manley Media</p>
   </footer>
 
-  <script src="../scripts/video.js"></script> <!-- Adjust path if needed -->
+  <script src="../scripts/video.js"></script>
 </body>
 </html>
