--- a/pages/video.html
+++ b/pages/video.html
@@ -8,11 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Video Details</h1>
+    <a href="../index.html">
+      <h1 class="logo">JOSH MANLEY</h1>
+    </a>
+
     <nav>
-      <a href="../index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+        <a href="../index.html">WORK</a>
+      <a href="about.html">ABOUT</a>
+      <a href="contact.html">CONTACT</a>
     </nav>
   </header>
 
