--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <a href="index.html">
-      <h1 class="logo">JOSH MANLEY</h1>
+      <h1 class="logo">Josh Manley</h1>
     </a>
 
     <nav>
