--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="../index.html">
-          <h1 class="logo">JOSH MANLEY</h1>
+          <h1 class="logo">Manley Media</h1>
         </a>
     
         <nav>
